Adjust to compile on java 8